--- a/styles.css
+++ b/styles.css
@@ -8,11 +8,15 @@ body {
   margin: 0;
 }
 
+p {
+  text-align: center;
+}
 /* Classes */
 
 .navbar {
   display: flex;
   background-color: #333;
+  justify-content: flex-end;
 }
 
 .navbar a {
